Update: allow Titles have content and fix title alert text contrast

--- a/src/css/docsAlerts.scss
+++ b/src/css/docsAlerts.scss
@@ -71,7 +71,7 @@
 		color: black;
 
 		& .alert-header {
-			color: white;
+			color: black;
 			background-color: #dfba4d;
 		}
 
